// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Templates Story with anotherTemplate 1`] = `
<section
  class="storybook-snapshot-container"
>
   
  
   
  <div>
    Template 2 
    story2
  </div>
  
   
  
   
  
  
</section>
`;

exports[`Storyshots Templates Story with myTemplate 1`] = `
<section
  class="storybook-snapshot-container"
>
   
  <div>
    Template 1 
    story1
  </div>
  
   
  
   
  
   
  
  
</section>
`;
